# mcp-idico

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  SKILL_MCP.md  docker-compose.yml  main.py  middleware.py  pyproject.toml  requirements.txt  test.py
analitycs/: data_transformations.py  operations.py  sales.py
auth/: debug.py  provider.py  redis_client.py
connections/: netsuite.py  netsuite_querys.py  postgresql.py  postgresql_querys.py
connections/netsuite/: client.py  queries.py
connections/postgresql/: queries.py
data/: 20260129_152522_get_quotes.json  20260129_152522_get_quotes.xlsx  20260129_152604_bookings_data.json  20260430_155119_bookings_data.json  20260430_155143_get_quotes.json  20260430_155212_opportunity_by_is.json  20260430_155228_quoted_items.json  20260430_155312_sold_items_by_period.json  20260430_155320_otd_data.json  20260430_155358_op_to_so.json  20260430_155600_guides_oneding_delivery.json  20260430_160503_sold_items_by_period.json  20260430_163324_sold_items_by_period.json
docs/: IMPLEMETACION_AUTH_LOGS.md  MANUAL_TOOLS_MCP.md
features/operations/: analytics.py  tools.py
features/performance/: analytics.py  tools.py
features/sales/: tools.py
nginx/: nginx.conf
server/: tool_registry.py
servers/: base.py  operations.py  performance.py  sales.py
tools/: files.py  netsuite.py  notifications.py  operations.py  performance.py  postgres.py  sales.py
tools/shared/: files.py
utils/: date.py  envelope.py  error_handling.py  json_df.py  transformations.py
