[project]
name = "idico-sales"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.3",
    "dotenv>=0.9.9",
    "fastmcp>=3.0.0,<4",
    "jaydebeapi>=1.2.3",
    "mcp[cli]>=1.16.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "psycopg[binary]>=3.3.2",
    "py-key-value-aio[redis]>=0.4.4",
]
